--- a/src/main/resources/templates/thymeleaf/menu/menu.html
+++ b/src/main/resources/templates/thymeleaf/menu/menu.html
@@ -29,9 +29,9 @@
 
         <div class="layui-btn-group menu">
             <button class="layui-btn" onclick="openViewBig(ctx+'/page/menu/menuAdd','新增')">新增</button>
-            <button class="layui-btn" data-type="getCheckData">获取选中行数据</button>
-            <button class="layui-btn" data-type="getCheckLength">获取选中数目</button>
-            <button class="layui-btn" data-type="isAll">验证是否全选</button>
+            <button class="layui-btn" data-type="getCheckData">删除</button>
+            <!--<button class="layui-btn" data-type="getCheckLength">获取选中数目</button>-->
+            <!--<button class="layui-btn" data-type="isAll">验证是否全选</button>-->
         </div>
         <div class="row">
             <div class="col-xs-12">
@@ -169,14 +169,14 @@
                 }
                 var ids = [];
                 for (var i = 0; i < data.length; i++) {
-                    ids.push(data[i].id);
+                    ids[i] = data[i].id;
                 }
                 $.ajax({
                     type: 'delete',
                     url: ctx + '/menu',
                     contentType: 'application/json',
                     dataType: "json",
-                    data: {ids: JSON.stringify(ids)},
+                    data: {ids:JSON.stringify(ids)},
                     success: function (d) {
                         if (d.status == "0") {
                             layer.msg("删除成功");
@@ -188,7 +188,7 @@
                     }
                 });
 
-                layer.alert(JSON.stringify(ids));
+                layer.alert(JSON.stringify({'ids': ids}));
             }
             , getCheckLength: function () { //获取选中数目
                 var checkStatus = table.checkStatus('menu')
